# nomad-parser-plugin-example

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: actions.yaml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
nomadparserexample/: parser.py
reference/: references.html
search/: search_index.json
tests/: test_parser.py
tutorial/: tutorial.html
